force-app/main/default/objects/Game_Point__c/Game_Point__c.object-meta.xml
<CustomObject>
    <label>Game Point</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Game Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>