force-app/main/default/objects/Game_Point__c/fields/Avatar__c.field-meta.xml
<CustomField>
    <fullName>Avatar__c</fullName>
    <label>Avatar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>