force-app/main/default/objects/Game_Point__c/fields/Avatar_Image__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Image__c</fullName>
    <formula>IMAGE(Avatar__c, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avatar Image</label>
    <type>Text</type>
</CustomField>