force-app/main/default/objects/Game_Point__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>