force-app/main/default/objects/Game_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Game__c</columns>
    <columns>Player_Name__c</columns>
    <columns>Level__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>